# RExVicon

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vicon.service
ViconSDK/: CMakeLists.txt  README.md  change_to_arm.sh  modify_makefile.sh
ViconSDK/DataStream/ViconCGStream/: ApexHaptics.h  ApplicationInfo.h  CameraCalibrationHealth.h  CameraCalibrationHealthDetail.h  CameraCalibrationInfo.h  CameraInfo.h  CameraSensorInfo.h  CameraTimingInfo.h  CameraWand2d.h  CameraWand2dDetail.h  CameraWand3d.h  CameraWand3dDetail.h  CentreOfPressureFrame.h  CentroidTracks.h  CentroidTracksDetail.h  CentroidWeights.h  Centroids.h  CentroidsDetail.h  ChannelInfo.h  Contents.h  DeviceInfo.h  EdgePairs.h  EdgePairsDetail.h  Enum.h  EyeTrackerFrame.h  EyeTrackerInfo.h  Filter.h  ForceFrame.h  ForcePlateInfo.h  FrameInfo.h  FrameRateInfo.h  GlobalSegments.h  GlobalSegmentsDetail.h  GreyscaleBlobs.h  GreyscaleBlobsDetail.h  GreyscaleSubsampledBlobs.h  HardwareFrameInfo.h  IsEqual.h  Item.h  KeepAlive.h  (+36 more)
ViconSDK/DataStream/ViconCGStreamClient/: CGStreamPostalService.h  CGStreamReaderWriter.cpp  CGStreamReaderWriter.h  IViconCGStreamClientCallback.h  ViconCGStreamBayer.cpp  ViconCGStreamBayer.h  ViconCGStreamClient.cpp  ViconCGStreamClient.h  ViconCGStreamClient.vcxproj  ViconCGStreamClient.vcxproj.filters
ViconSDK/DataStream/ViconCGStreamClientSDK/: CGClient.cpp  CGClient.h  ICGClient.h  ICGFrameState.h  ViconCGStreamClientSDK.vcxproj  ViconCGStreamClientSDK.vcxproj.filters
ViconSDK/DataStream/ViconDataStreamSDKCore/: CoreClient.cpp  CoreClient.h  CoreClientTimingLog.cpp  CoreClientTimingLog.h  RetimerUtils.cpp  RetimerUtils.h  RetimingClient.cpp  RetimingClient.h  RetimingCore.cpp  RetimingCore.h  SegmentPoseReader.cpp  SegmentPoseReader.h  ViconDataStreamSDKCore.vcxproj  ViconDataStreamSDKCore.vcxproj.filters  ViconDataStreamSDKCoreVersion.h  WirelessConfiguration.cpp  WirelessConfiguration.h
ViconSDK/DataStream/ViconDataStreamSDKCoreUtils/: AxisMapping.cpp  AxisMapping.h  ClientUtils.cpp  ClientUtils.h  Constants.h  ViconDataStreamSDKCoreUtils.vcxproj  ViconDataStreamSDKCoreUtils.vcxproj.filters  ViconDataStreamSDKCoreUtilsVersion.h
ViconSDK/DataStream/ViconDataStreamSDK_C/: CClient.cpp  CClient.h  CRetimingClient.cpp  CRetimingClient.h  CTypeDefs.h  ViconDataStreamSDK_C.vcxproj  ViconDataStreamSDK_C.vcxproj.filters  ViconDataStreamSDK_CVersion.h
ViconSDK/DataStream/ViconDataStreamSDK_CPP/: CoreAdapters.h  DataStreamClient.cpp  DataStreamClient.h  DataStreamRetimingClient.cpp  DataStreamRetimingClient.h  IDataStreamClientBase.h  StringFactory.h  ViconDataStreamSDK_CPP.vcxproj  ViconDataStreamSDK_CPP.vcxproj.filters  ViconDataStreamSDK_CPPVersion.h
ViconSDK/DataStream/ViconDataStreamSDK_CPPRetimerTest/: ViconDataStreamSDK_CPPRetimerTest.cpp  ViconDataStreamSDK_CPPRetimerTest.vcxproj  ViconDataStreamSDK_CPPRetimerTest.vcxproj.filters
ViconSDK/DataStream/ViconDataStreamSDK_CPPTest/: ViconDataStreamSDK_CPPTest.cpp  ViconDataStreamSDK_CPPTest.vcxproj  ViconDataStreamSDK_CPPTest.vcxproj.filters
ViconSDK/DataStream/ViconDataStreamSDK_CTest/: ViconDataStreamSDK_CTest.c  ViconDataStreamSDK_CTest.vcxproj  ViconDataStreamSDK_CTest.vcxproj.filters
ViconSDK/DataStream/ViconDataStreamSDK_DotNET/: Client.cpp  VersionInfoResource.rc2  ViconDataStreamSDK_DotNET.vcxproj  ViconDataStreamSDK_DotNET.vcxproj.filters  ViconDataStreamSDK_DotNETVersion.h
ViconSDK/DataStream/ViconDataStreamSDK_DotNETTest/: ViconDataStreamSDK_DotNETTest.cs  ViconDataStreamSDK_DotNETTest.csproj
ViconSDK/DataStream/ViconDataStreamSDK_MATLAB/: Client.m  ForcedFirstPCH.h  Result.m  TimecodeStandard.m  VersionInfoResource.rc2  ViconDataStreamSDK_MATLAB.cpp  ViconDataStreamSDK_MATLAB.h  ViconDataStreamSDK_MATLAB.vcxproj  ViconDataStreamSDK_MATLAB.vcxproj.filters  ViconDataStreamSDK_MATLABDotNETTest.m  ViconDataStreamSDK_MATLABTest.m  ViconDataStreamSDK_MATLABVersion.h  resource.h
ViconSDK/StreamCommon/: Buffer.h  BufferDetail.h  BufferImpl.h  CGStreamAsyncReaderWriter.cpp  CGStreamAsyncReaderWriter.h  StreamCommon.vcxproj  StreamCommon.vcxproj.filters  Type.h
cmake/modules/: FindLibSerialPort.cmake  FindViconSDK.cmake  Findlibserialport.cmake  getFMT.cmake  getLibserialport.cmake  getViconSDK.cmake  getZMQ.cmake
src/: CMakeLists.txt  callbacks.cpp  callbacks.hpp  main.cpp  pose.cpp  pose.hpp  rexvicon_main.cpp  simulated_vicon_main.cpp  utils.cpp  utils.hpp  vicon_driver.cpp  vicon_driver.hpp
src/arduino/: build_lora_relay.sh
src/arduino/arduino_lora_example/: arduino_lora_example.ino
src/arduino/libraries/Pose/: Pose.hpp  Pose_utils.hpp  receiver.hpp
src/arduino/lora_example/: lora_example.ino
src/arduino/lora_receciver/: lora_receciver.ino
src/arduino/lora_relay/: lora_relay.ino
src/arduino/lora_relay_receiver/: lora_relay_receiver.ino
src/arduino/lora_tx/: lora_tx.ino
src/arduino/teensy_receiver/: pose.hpp  receiver.cpp  receiver.hpp  teensy_receiver.ino
src/test/: CMakeLists.txt  callbacks_test.cpp  lora_latency_test.cpp  port_config.c  pose_test.cpp  serial_write_test.cpp  simple_serial_test.cpp  vicon_connection_test.cpp  zmq_pub_test.cpp
